--- a/src/ImGui.NET.SampleProgram/imgui.ini
+++ b/src/ImGui.NET.SampleProgram/imgui.ini
@@ -4,12 +4,17 @@ Size=400,400
 Collapsed=0
 
 [ImGUI.NET Sample Program]
-Pos=5,10
-Size=950,520
-Collapsed=0
+Pos=921,273
+Size=1048,686
+Collapsed=1
 
 [Memory editor]
-Pos=210,80
+Pos=938,129
 Size=594,403
+Collapsed=1
+
+[ImGui Demo]
+Pos=155,124
+Size=655,1072
 Collapsed=0
 
